--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,4 @@
+<div class="container">
 <h2 class="page-header">Account Login</h2>
 <form method="post" action="/users/login">
 <div class="form-group">
@@ -8,5 +9,6 @@
     <label>Password</label>
     <input type="password" class="form-control" name="password" placeholder="Password">
 </div>
-<button type="submit" class="btn btn-default">Submit</button>
+<button type="submit" class="btn btn-primary">Submit</button>
 </form>
+</div>
