--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,3 +1,4 @@
+<div class="container">
 <h2 class="page-header">Register</h2>
 {{#if errors}}
   {{#each errors}}
@@ -25,5 +26,6 @@
     <label>Confirm Password</label>
     <input type="password" class="form-control" placeholder="Password" name="password2">
 </div>
-<button type="submit" class="btn btn-default">Submit</button>
+<button type="submit" class="btn btn-primary">Submit</button>
 </form>
+</div>
