--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -83,3 +83,10 @@ tr {
   position: relative;
   margin-top: 10px;
 }
+.jumbotron {
+  margin-top: 100px;
+  margin-left: 30%;
+  background-color:	#F5F5DC;
+  border: solid 2px black;
+  width: 500px;
+}
