changed the format to the of the time in datepicker and added an am pm functionality with long date syntax

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -6257,3 +6257,7 @@ ul.sidebar .sidebar-list .menu-icon {
 .hospital-count {
     background: #f7d71b!important;;
 }
+.fixed-header {
+  border: 1px solid rgba(0, 0, 0, 0.12); }
+  .fixed-header tr {
+    background-color: #fff; }
